// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsultationStepHeader /> renders correctly 1`] = `
<Fragment>
  <div
    className="row mb-30 text-center"
  >
    <div
      className="mr-15 d-ib"
    >
      <i
        className="cap cap-calendar-2-1"
      />
       
      <DatesInterval
        endAt="Thu Jul 25 2019"
        fullDay={true}
        startAt="Thu Jul 25 2019"
      />
    </div>
    <div
      className="mr-15 d-ib"
    >
      <i
        className="cap cap-hourglass-1"
      />
       
      <RemainingTime
        endAt="Thu Jul 25 2019"
      />
    </div>
  </div>
  <BodyInfos
    body="Je suis un beau body"
    maxLength={1600}
  />
</Fragment>
`;

exports[`<ConsultationStepHeader /> renders correctly when step does not have an end date 1`] = `
<Fragment>
  <div
    className="row mb-30 text-center"
  >
    <div
      className="mr-15 d-ib"
    >
      <i
        className="cap cap-calendar-2-1"
      />
       
      <DatesInterval
        endAt={null}
        fullDay={true}
        startAt="Thu Jul 25 2019"
      />
    </div>
  </div>
  <BodyInfos
    body="Je suis un beau body"
    maxLength={1600}
  />
</Fragment>
`;
